--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-	"token": "MTM1MjU4NzQ5ODU5Mjc5NjY3Mw.GzA_6K.NIJlicx4oVCfFMyBC8Le0hIEEzC9d7VQJ6mAAw",
+	"token": "MTM1MjU4NzQ5ODU5Mjc5NjY3Mw.GfNCAL.IJAekAMqKPDi7FeKEkNaIjRDDk4Ly-tjFucXE4",
 	"originalVoiceChannelId":"1368608739946528909"
 }
